Fix meta tag attributes

--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -17,10 +17,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="Code of conduct for all businesses operating at the Esquimalt Graving Dock. Effective January 1, 2006." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Code of Conduct - EGD - PWGSC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; Ethics" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Ethics" />
+<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, code of conduct" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
