--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -17,10 +17,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="Le bassin de mise en cale seche d'Esquimalt mesure 357,5 metres sur 38,4 metres - soit environ 1 200 pieds de longueur sur 135 de largeur. La jetee d'embarquement nord mesure 305 metres de longueur (1 000 pieds), avec une profondeur d'eau de 10 metres (30 pieds) à maree basse. Les installations comptent egalement une zone mouillage de 305 metres le long du quai sud." />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dcterms.title" content="Renseignments g&eacute;n&eacute;raux - CSE - TPSGC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Navire; Quai; Mesure" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="fra" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Navire; Quai; Mesure" />
+<meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, dimensions" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
