--- a/his/1925-eng.html
+++ b/his/1925-eng.html
@@ -18,10 +18,10 @@
 <meta name="dcterms.description" content="History of the Esquimalt Graving Dock" />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="History 1925 - EGD - PWGSC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; History" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; History" />
+<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, historique" />
 <!-- METADATA ENDS | FIN DES METADONNEES -->
 <!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
