--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -17,10 +17,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="When British Columbia became a province within the Dominion of Canada in 1871, the Terms of the Union specified a graving dock be built at Lang Cove. The Colony's economy heavily relied on the commercial shipbuilding industry and it had to ensure it could attract business. At the time, the Drydock was large enough to accommodate every ship in the British Empire." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="History - EGD - PWGSC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; History" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; History" />
+<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, history" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
