--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -17,10 +17,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="Code de conduite pour toutes les entreprises qui m&egrave;nent des activit&eacute;s &agrave; la cale s&egrave;che d'Esquimalt. Entre&eacute; en vigeur le 1er janvier 2006." />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dcterms.title" content="Code de conduite - CSE - TPSGC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Navire; Quai; Éthique" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="fra" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Navire; Quai; Éthique" />
+<meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, code de conduite" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
