--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -16,10 +16,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="EGD Leading the Way with ISO 14001" />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
+<meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, ISO 14001, environment, management, programs, health;, safety" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
