--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -17,10 +17,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.description" content="CSE un chef de file en voie vers la certification ISO 14001" />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dcterms.title" content="un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC" />
-<meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-<meta name="dcterms.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
-<meta name="dcterms.language" scheme="ISO639-2/T" content="fra" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
+<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.subject" title="gccore" content="Navire; Quai; Environnement; Information;  Index" />
+<meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, ISO 14001, environnement, gestion, programmes, sant&eacute;, s&eacute;curit&eacute;" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
