--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Code de conduite - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Code de conduite pour toutes les entreprises qui m&egrave;nent des activit&eacute;s &agrave; la cale s&egrave;che d'Esquimalt. Entre&eacute; en vigeur le 1er janvier 2006." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Code de conduite</h1>
 
 				<h2>ARTICLE&nbsp;1</h2>
 				<h3><strong>OBJET ET PRINCIPES DIRECTEURS</strong></h3>
