--- a/env/barrage-boom-fra.html
+++ b/env/barrage-boom-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>La cale sèche d'Esquimalt fait barrage aux déversements de pétrole - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="La cale sèche d'Esquimalt fait barrage aux déversements de pétrole" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">La cale sèche d'Esquimalt fait barrage aux déversements de pétrole</h1>
 <p>Par  Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
@@ -77,7 +77,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p>Bill Pleming, agent r&eacute;gional de s&eacute;curit&eacute; de <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, a fait le voyage depuis Vancouver pour participer &agrave; la formation. Ce qui l'a impressionn&eacute; plus que tout, indique-t-il, est la collaboration qu'il a constat&eacute;e entre <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, le minist&egrave;re de la D&eacute;fense nationale et le secteur priv&eacute;. &laquo;&nbsp;Ils ont vraiment &eacute;tabli des rapports proactifs&nbsp;&raquo;, a-t-il affirm&eacute;. </p>
 
 				<p><em>Source&nbsp;: Ensemble, ao&ucirc;t&nbsp;2000, volume&nbsp;8, no&nbsp;6</em></p>
-			</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
