--- a/env/ecocivisme-environment-fra.html
+++ b/env/ecocivisme-environment-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>CSE : un exemple d'écocivisme - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="CSE : un exemple d'écocivisme" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">CSE : un exemple d'écocivisme</h1>
 				<p>par  Roy John<br />
 					chef d'&eacute;quipe, 
 Services d'enregistrement &ndash; Environnement, Syst&egrave;mes de sant&eacute; et de s&eacute;curit&eacute;
@@ -87,7 +87,6 @@ Services d'enregistrement &ndash; Environnement, Syst&egrave;mes de sant&eacute;
 
 				
 				<p><em>Source&nbsp;: Calibre,  Printemps&nbsp;2002,  volume&nbsp;7, no&nbsp;1</em></p>
-			</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
