--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Politique environnementale - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="La Cale s&egrave;che d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Politique environnementale</h1>
         <p>La cale s&egrave;che d'Esquimalt, en partenariat avec l'industrie de r&eacute;paration
           de navires, veut &ecirc;tre le meilleur chantier naval de la
           c&ocirc;te Ouest de l'Am&eacute;rique du Nord.</p>
@@ -91,7 +91,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 						de l'industrie et de la collectivit&eacute;.   </li>
 				</ul>
 				<img src="../images/poli-sig-fra.jpg" alt="" width="494" height="138" />
-			</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
