--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="CSE un chef de file en voie vers la certification ISO 14001" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">un chef de file en voie vers la certification ISO 14001</h1>
 
 				<p>par Dan del Villano</p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
@@ -77,7 +77,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 				<p>Le syst&egrave;me environnemental rendra &eacute;galement la cale s&egrave;che plus concurrentielle. En effet, de nombreuses soci&eacute;t&eacute;s maritimes, et en particulier les op&eacute;rateurs de navires de croisi&egrave;re, veulent obtenir des services aussi &eacute;cologiques que possible. Et gr&acirc;ce &agrave; <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, la cale s&egrave;che d'Esquimalt constituera d&eacute;sormais pour elles un des meilleurs choix.</p>
 				<p><em>Source&nbsp;: Ensemble, juillet 2000, volume&nbsp;8, no&nbsp;5</em></p>
-			</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
