--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Norme de rendement - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Norme de rendement" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Norme de rendement</h1>
 
 				<!-- <p>Comments on this document are being solicited for the next 30 days (ending
 					Apr 18/2008). If you have any comments, please direct them
