--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Renseignments g&eacute;n&eacute;raux - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Le bassin de mise en cale seche d'Esquimalt mesure 357,5 metres sur 38,4 metres - soit environ 1 200 pieds de longueur sur 135 de largeur. La jetee d'embarquement nord mesure 305 metres de longueur (1 000 pieds), avec une profondeur d'eau de 10 metres (30 pieds) à maree basse. Les installations comptent egalement une zone mouillage de 305 metres le long du quai sud." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Renseignments g&eacute;n&eacute;raux</h1>
 
 				<p>Le bassin de mise en cale s&egrave;che d'Esquimalt mesure 357,5&nbsp;m&egrave;tres
 					sur 38,4&nbsp;m&egrave;tres &ndash; soit environ 1&nbsp;200&nbsp;pieds de longueur sur 135&nbsp;de
