--- a/emp-loc-fra.html
+++ b/emp-loc-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Emplacement - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="La Cale s&egrave;che d'Esquimalt est situee a Esquimalt, au 825 Admirals Road - a 15 minutes au nord de Victoria, a l'extremite sud de l'ile de Vancouver." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Emplacement</h1>
 
 				<p>La Cale s&egrave;che d'Esquimalt est situ&eacute;e &agrave; Esquimalt,
 					au 825&nbsp;Admirals Road &ndash; &agrave; 15&nbsp;minutes au nord de Victoria, &agrave; l'extr&eacute;mit&eacute; sud
