--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Programme environnemental - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Programme environnemental de la cale s&egrave;che d'Esquimalt." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Programme environnemental</h1>
       <img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
 
       <p>
@@ -204,7 +204,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         Courriel&nbsp;: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
         T&egrave;l&egrave;phone&nbsp;: 250-363-3961
 		  </p>
-		</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
