--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>CSE: tarifs</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="CSE un chef de file en voie vers la certification ISO 14001" />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">CSE: tarifs</h1>
         <p>
           La cale s&egrave;che d'Esquimalt (CSE) compte un certain nombre de changements prometteurs, tant &agrave; l&iquest;&eacute;tape de planification qu&iquest;&agrave; l&iquest;&eacute;tape exp&eacute;rimentale. Le projet principal sera l&iquest;installation d&iquest;une nouvelle grue &agrave; port&eacute;e variable &agrave; deux fl&egrave;ches de 30&nbsp;tonnes qui sera &eacute;rig&eacute;e du c&ocirc;t&eacute; sud du quai de bassin. La pr&eacute;paration pour l&iquest;&eacute;rection de la nouvelle grue doit commencer en avril&nbsp;2010. La date approximative d&iquest;entr&eacute;e en service de cette nouvelle grue de 30&nbsp;tonnes est la fin juillet&nbsp;2010. Apr&egrave;s l&iquest;&eacute;rection et la mise en service de la nouvelle grue du c&ocirc;t&eacute; sur du quai du bassin les travaux commenceront imm&eacute;diatement pour le d&eacute;mant&egrave;lement de la grue de 30&nbsp;tonnes existante pour la remise &agrave; neuf et la modernisation de ses moteurs et entra&icirc;nements. La grue de 30&nbsp;tonnes existante sera d&eacute;mont&eacute;e pi&egrave;ce par pi&egrave;ce dans le fond de la cale s&egrave;che de la section&nbsp;no&nbsp;3. Elle y sera enti&egrave;rement inspect&eacute;e et r&eacute;par&eacute;e, au besoin, puis remont&eacute;e du c&ocirc;t&eacute; nord du quai de bassin sur les chenilles de notre grue-marteau existante de 44&nbsp;tonnes. Ces travaux doivent commencer imm&eacute;diatement apr&egrave;s la mise en service de la nouvelle grue vers la fin juillet&nbsp;2010. L&iquest;entrepreneur du pr&eacute;sent projet doit utiliser l&iquest;espace dans le fond de la cale s&egrave;che de la section no&nbsp;3 en plus des zones adjacentes au c&ocirc;t&eacute; sup&eacute;rieur de la section no&nbsp;3 pour ses travaux sur cette grue. La remise &agrave; neuf et la modernisation de la grue existante de 30&nbsp;tonnes de la cale s&egrave;che d'Esquimalt s&iquest;effectuera de juillet&nbsp;2010 jusqu&iquest;environ novembre&nbsp;2010. Lorsque notre grue existante de 30&nbsp;tonnes sera assembl&eacute;e et remise en service du c&ocirc;t&eacute; nord du quai de bassin, les travaux commenceront alors pour l&iquest;enl&egrave;vement de notre grue-marteau existante de 44&nbsp;tonnes du c&ocirc;t&eacute; nord du quai de bassin.
         </p>
@@ -69,7 +69,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         <p>
         Si vous avez des questions portant sur ce qui pr&eacute;c&egrave;de ou si vous d&eacute;sirez davantage d&iquest;information n'h&eacute;sitez pas &agrave; communiquer avec <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">david.latoski@pwgsc-tpsgc.gc.ca</a>, gestionnaire de l&iquest;exploitation, cale s&egrave;che d'Esquimalt, au&nbsp;250-363-8056.
         </p>
-			</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
