--- a/merci-thankyou-fra.html
+++ b/merci-thankyou-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Merci - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Merci de nous avoir contactes." />
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Merci</h1>
 
 				<p>Vos commentaires ont &eacute;t&eacute; envoy&eacute;s.</p>
 				<p>Merci de vous &ecirc;tre adress&eacute;s &agrave; la <a href="/pac/cse-egd/index-fra.html">Cale s&egrave;che d'Esquimalt</a> (Travaux publics et Services gouvernementaux
