Mark up history articles properly

--- a/his/1921-fra.html
+++ b/his/1921-fra.html
@@ -10,13 +10,13 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>1921 - 1923 - CSE - TPSGC</title>
+<title>Historique 1921 &ndash; 1923 - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Historique de la cale seche d'Esquimalt" />
 <meta name="dcterms.description" content="Historique de la cale seche d'Esquimalt" />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dcterms.title" content="1921 - 1923 - CSE - TPSGC" />
+<meta name="dcterms.title" content="Historique 1921 - 1923 - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Histoire" />
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="../historique-history-fra.html">Historique</a></li>
+<li>Historique 1921 - 1923</li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">1921</h1>
+<h1 id="wb-cont">Historique 1921 - 1923</h1>
 
 				<div class="option4">
 					<div class="smallFont" style="font-weight:bold;">
