--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Article sur le QE - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Historique de la cale seche d'Esquimalt" />
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="../historique-history-fra.html">Historique</a></li>
+<li>Article sur le <abbr title="Queen Elizabeth">QE</abbr></li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Notices</h1>
+<h1 id="wb-cont">Article sur le <abbr title="Queen Elizabeth">QE</abbr></h1>
 
 				<p><em>Un secret bien gard&eacute;</em></p>
 				<p>Ken Moffat, originaire d'Esquimalt, n'avait que cinq ans lorsque le tr&egrave;s
