--- a/his/1927-eng.html
+++ b/his/1927-eng.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<!--[if IE 7]><html lang="en" class="no-js ie7"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js ie8"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" class="no-js">
+<!--<![endif]-->
 <head>
-<!-- CLF 2.0 TEMPLATE VERSION 1.04 | VERSION 1.04 DU GABARIT NSI 2.0 -->
-<!-- PWGSC TEMPLATE VERSION 1.0 | VERSION 1.0 DU GABARIT TPSGC -->
-<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-<!-- TITLE BEGINS | DEBUT DU TITRE -->
-
+<meta charset="utf-8" />
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
+<!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
+<!-- TitleStart -->
 <title>History&nbsp;1927 &ndash; EGD &ndash; PWGSC</title>
-
-<!-- TITLE ENDS | FIN DU TITRE -->
-<!-- METADATA BEGINS | DEBUT DES METADONNEES -->
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
-<link rel="schema.dc" href="http://purl.org/dc/terms/" />
-
+<!-- TitleEnd -->
+<!-- MetadataStart -->
 <meta name="description" content="History of the Esquimalt Graving Dock" />
 <meta name="dcterms.description" content="History of the Esquimalt Graving Dock" />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
@@ -23,64 +22,43 @@
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; History" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, history" />
-<!-- METADATA ENDS | FIN DES METADONNEES -->
-<!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
-<link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
-<style type="text/css" media="all">
-@import url(/clf20/css/base2.css);
-</style>
-<!-- TEMPLATE SCRIPTS/CSS END | FIN DES SCRIPTS/CSS DU GABARIT -->
-<!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
-<script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
-<script type="text/javascript">
-	/* <![CDATA[ */
-		var params = {
-			lng:"eng",
-			pngfix:"/clf20/images/inv.gif"
-		};
-		PE.progress(params);
-	/* ]]> */
-	</script>
-<!-- PROGRESSIVE ENHANCEMENT ENDS | FIN DE L'AMELIORATION PROGRESSIVE -->
-<!-- CUSTOM SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS PERSONNALISES -->
-<link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-<!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
-<!-- TEMPLATE PRINT CSS BEGINS | DEBUT DU CSS DU GABARIT POUR L'IMPRESSION -->
-<link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
-<!-- TEMPLATE PRINT CSS ENDS | FIN DU CSS DU GABARIT POUR L'IMPRESSION -->
-</head>
-<body>
-<div class="page">
-	<div class="core">
-		<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-		<!--#include virtual="/clf20/ssi/tete-header-eng.html"-->
-		<!-- HEADER ENDS | FIN DE L'EN-TETE -->
-		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
-		<p class="breadcrumb">
-			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; History&nbsp;1927<br />
-			</p>
-		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
-			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
+<!-- MetadataEnd -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 
-			<div class="center">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					History&nbsp;1927
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
+<!-- CustomScriptsCSSStart -->
+<!-- CustomScriptsCSSEnd -->
+</head>
+
+<body><div id="wb-body-sec">
+<div id="wb-skip">
+<ul id="wb-tphp">
+<li id="wb-skip1"><a href="#wb-cont">Skip to main content</a></li>
+<li id="wb-skip2"><a href="#wb-nav">Skip to secondary menu</a></li>
+</ul>
+</div>
+
+<div id="wb-head"><div id="wb-head-in"><header>
+<!-- HeaderStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/banner_gc-gc_banner-eng.html" -->
+<!--#include virtual="/site/wet3.0/html5/includes/banner_site-site_banner-eng.html" -->
+<nav role="navigation">
+<!--#include virtual="/site/wet3.0/html5/includes/nav_mega-mega_nav-eng.html" -->
+
+<div id="gcwu-bc"><h2>Breadcrumb trail</h2><div id="gcwu-bc-in">
+<ol>
+<!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
+<!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
+<li><a href="../historique-history-eng.html">History</a></li>
+<li>History&nbsp;1927</li>
+</ol>
+</div></div>
+</nav>
+<!-- HeaderEnd -->
+</header></div></div>
+
+<div id="wb-core"><div id="wb-core-in" class="equalize">
+<div id="wb-main" role="main"><div id="wb-main-in">
+<h1 id="wb-cont">History&nbsp;1927</h1>
 				<div class="option4">
 					<div class="smallFont" style="font-weight:bold;">
 						<img src="../images/historique_history/1927_1.jpg" alt="" width="300" height="236" /><br />
@@ -96,26 +74,22 @@
 					<li><a href="1926-eng.html">History&nbsp;1926</a></li>
 					<li><a href="1927-eng.html">History&nbsp;1927</a></li>
 				</ul>
-			</div>
+</div></div>
+<div id="wb-sec"><div id="wb-sec-in">
+<!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
+</div></div>
+</div></div>
 
-			<!-- CONTENT ENDS | FIN DU CONTENU -->
-			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
-			<div class="footer">
-				<div class="footerline"></div>
-				<div class="foot1">
-					<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
-					Date Modified: <span class="date">
-					<!--#config timefmt="%Y-%m-%d"-->
-					<!--#echo var="LAST_MODIFIED"-->
-					</span>
-					<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFICATION -->
-				</div>
-				<!--#include virtual="/clf20/ssi/foot-pied-eng.html"-->
-			</div>
-			<!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
-		</div>
-	</div>
-</div>
+<div id="wb-foot"><div id="wb-foot-in"><footer><h2>Footer</h2>
+<!-- FooterStart -->
+<!--#include virtual="/site/wet3.0/html5/includes/pied_site-site_footer-eng.html" -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/pied_gc-gc_footer-eng.html" -->
+<!-- FooterEnd -->
+</footer>
+</div></div></div>
+
+<!-- ScriptsStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/script_pied-script_footer.html" -->
+<!-- ScriptsEnd -->
 </body>
 </html>
