--- a/his/1927-fra.html
+++ b/his/1927-fra.html
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="../historique-history-fra.html">Historique</a></li>
+<li>Historique 1927</li>
 </ol>
 </div></div>
 </nav>
